--- a/ci-operator/config/openshift/microshift/openshift-microshift-main.yaml
+++ b/ci-operator/config/openshift/microshift/openshift-microshift-main.yaml
@@ -130,6 +130,14 @@ tests:
     env:
       DRY_RUN: "y"
     workflow: openshift-microshift-rebase
+- as: ocp-conformance-reduced
+  cluster: build02
+  run_if_changed: ^(assets/.*|cmd/.*|etcd/.*|pkg/.*|packaging/.*|test/.*|vendor/.*|go\.sum|go\.mod|Makefile|.*\.sh)
+  steps:
+    cluster_profile: aws
+    env:
+      EC2_AMI: ami-02b8534ff4b424939
+    workflow: openshift-microshift-e2e-openshift-conformance-reduced-aws
 - as: microshift-metal-tests
   cluster: build02
   run_if_changed: ^(assets/.*|cmd/.*|etcd/.*|pkg/.*|packaging/.*|test/.*|vendor/.*|go\.sum|go\.mod|Makefile|.*\.sh)
