--- a/ci-operator/config/rhpit/interop-tests/rhpit-interop-tests-main_mtc-test-multi-cluster-4.14.yaml
+++ b/ci-operator/config/rhpit/interop-tests/rhpit-interop-tests-main_mtc-test-multi-cluster-4.14.yaml
@@ -29,6 +29,8 @@ tests:
       CLUSTER1_CONFIG: name=ci-aws-ipi;base_domain=cspilp.interop.ccitredhat.com;platform=aws;region=us-east-2;version=4.14;stream=nightly;worker_flavor=m5.xlarge
       CLUSTER2_CONFIG: name=ci-aws-ipi;base_domain=cspilp.interop.ccitredhat.com;platform=aws;region=us-east-2;version=4.14;stream=nightly;worker_flavor=m5.xlarge
       PULL_SECRET_NAME: pull-secret
+      S3_BUCKET_NAME: openshift-cli-installer
+      S3_BUCKET_PATH: openshift-ci
     test:
     - ref: mtc-poc-sleep
     workflow: cluster
