--- a/ci-operator/config/rhpit/interop-tests/rhpit-interop-tests-main__rosa-sts-test-operator-ocp4.13-lp-interop.yaml
+++ b/ci-operator/config/rhpit/interop-tests/rhpit-interop-tests-main__rosa-sts-test-operator-ocp4.13-lp-interop.yaml
@@ -11,6 +11,10 @@ base_images:
     name: openshift-cli-installer
     namespace: ci
     tag: latest
+  rhods-addon-tests:
+    name: ods-ci
+    namespace: ci
+    tag: latest
 build_root:
   image_stream_tag:
     name: release
