ci-operator/config/openshift/release: Add 4.14 and 4.15 cred-freeze jobs
4.14, becasue we want to freeze these through the life of 4.14,
following the existing pattern, most recently d6667671cd
(ci-operator/config/openshift/release/openshift-release-master__nightly-4.13:
Add oldest-* jobs, 2023-04-26, #38728).  I'm not pulling in the
rollback job this time, because that's moving under QE and is in
flight separately in [1].

I'm also adding a 4.15 cred-freeze job this time, to catch up with
dbcbb85c7f (add explanation of blocking jobs in master before service
streams, 2023-09-18, #43418).  As I pointed out in d6667671cd, I'm
still concerned about the amount of churn that I expect will land
during the engineering candidate, but I'm not on the release-oversight
team, and if they perfer having a blocker job in the development
branch with occasional pin bumps, that's fine with me.

The bulk of the ci-operator/jobs content is from:

  $ make jobs

But then I manually edited to inject reporter_config, as described in
08db24d6d1 (ci-operator/jobs/openshift/release: Ping @patch-manager
for cred-freeze failures, 2021-12-08, #24177).

[1]: https://github.com/openshift/release/pull/43401

--- a/ci-operator/config/openshift/release/openshift-release-master__nightly-4.15.yaml
+++ b/ci-operator/config/openshift/release/openshift-release-master__nightly-4.15.yaml
@@ -95,6 +95,10 @@ releases:
       product: ocp
       stream: nightly
       version: "4.15"
+  oldest-supported-credentials-request:
+    release:
+      channel: candidate
+      version: 4.14.0-ec.4
 resources:
   '*':
     requests:
@@ -587,6 +591,13 @@ tests:
     cluster_profile: gcp
     workflow: openshift-e2e-gcp-xpn
   timeout: 6h0m0s
+- as: credentials-request-freeze
+  interval: 48h
+  steps:
+    dependencies:
+      OPENSHIFT_FROZEN_RELEASE_IMAGE: release:oldest-supported-credentials-request
+      OPENSHIFT_LATEST_RELEASE_IMAGE: release:latest
+    workflow: openshift-credentials-request-freeze
 - as: e2e-aws-sdn-upgrade
   interval: 168h
   steps:
