--- a/ci-operator/config/openshift/release/openshift-release-master__nightly-4.14.yaml
+++ b/ci-operator/config/openshift/release/openshift-release-master__nightly-4.14.yaml
@@ -95,6 +95,10 @@ releases:
       product: ocp
       stream: nightly
       version: "4.14"
+  oldest-supported-credentials-request:
+    release:
+      channel: candidate
+      version: 4.14.0-rc.1
 resources:
   '*':
     requests:
@@ -595,6 +599,13 @@ tests:
     cluster_profile: gcp
     workflow: openshift-e2e-gcp-xpn
   timeout: 6h0m0s
+- as: credentials-request-freeze
+  interval: 48h
+  steps:
+    dependencies:
+      OPENSHIFT_FROZEN_RELEASE_IMAGE: release:oldest-supported-credentials-request
+      OPENSHIFT_LATEST_RELEASE_IMAGE: release:latest
+    workflow: openshift-credentials-request-freeze
 - as: e2e-aws-sdn-upgrade
   interval: 168h
   steps:
