--- a/core-services/prow/02_config/openshift/grafana-tempo-operator/_prowconfig.yaml
+++ b/core-services/prow/02_config/openshift/grafana-tempo-operator/_prowconfig.yaml
@@ -6,6 +6,7 @@ branch-protection:
           branches:
             main:
               protect: false
+              unmanaged: true
 tide:
   queries:
   - labels:
