--- a/ci-operator/jobs/openshift/multiarch/openshift-multiarch-master-periodics.yaml
+++ b/ci-operator/jobs/openshift/multiarch/openshift-multiarch-master-periodics.yaml
@@ -10118,7 +10118,7 @@ periodics:
     repo: multiarch
   labels:
     ci-operator.openshift.io/cloud: gcp
-    ci-operator.openshift.io/cloud-cluster-profile: gcp
+    ci-operator.openshift.io/cloud-cluster-profile: gcp-arm64
     ci-operator.openshift.io/variant: nightly-4.14
     ci.openshift.io/generator: prowgen
     job-release: "4.14"
@@ -10173,12 +10173,8 @@ periodics:
       secret:
         secretName: ci-pull-credentials
     - name: cluster-profile
-      projected:
-        sources:
-        - secret:
-            name: cluster-secrets-gcp
-        - configMap:
-            name: cluster-profile-gcp
+      secret:
+        secretName: cluster-secrets-gcp-arm64
     - name: pull-secret
       secret:
         secretName: registry-pull-credentials
