kubernetes-nmstate: Add fix-uid.sh gen script step
The kubernetes-nmstate jobs are failing on missing script. This change
add the proper baremetal packet step to generate it.

Signed-off-by: Enrique Llorente <ellorent@redhat.com>

--- a/ci-operator/step-registry/kubernetes-nmstate/e2e/handler/kubernetes-nmstate-e2e-handler-workflow.yaml
+++ b/ci-operator/step-registry/kubernetes-nmstate/e2e/handler/kubernetes-nmstate-e2e-handler-workflow.yaml
@@ -13,6 +13,7 @@ workflow:
       HANDLER_NAMESPACE: "nmstate"
       OPERATOR_NAMESPACE: "nmstate"
     pre:
+    - ref: baremetalds-packet-setup
     - ref: baremetalds-devscripts-conf-extranetwork
     - chain: baremetalds-ofcir-pre
     post:
