--- a/ci-operator/step-registry/hypershift/mce/ibmz/test/hypershift-mce-ibmz-test-chain.yaml
+++ b/ci-operator/step-registry/hypershift/mce/ibmz/test/hypershift-mce-ibmz-test-chain.yaml
@@ -13,6 +13,7 @@ chain:
             if [ "$count" -eq 0 ]
             then
                 echo "All the cluster operators are ready"
+                oc get co
                 break
             else
                 echo "All the cluster operators are not ready yet"
