--- a/ci-operator/config/CSPI-QE/MSI/CSPI-QE-MSI-cluster-install-uninstall.yaml
+++ b/ci-operator/config/CSPI-QE/MSI/CSPI-QE-MSI-cluster-install-uninstall.yaml
@@ -82,7 +82,7 @@ tests:
   steps:
     cluster_profile: aws-managed-cspi-qe
     env:
-      CLUSTER_NAME_PREFIX: "gcp"
+      CLUSTER_NAME_PREFIX: gcp
       CLUSTER1_CONFIG: platform=gcp-osd;region=us-west1;version=4.13;compute-machine-type=custom-4-16384;replicas=2;channel-group=candidate;expiration-time=4h;timeout=2h
       GCP_SERVICE_ACCOUNT_NAME: service_account.json
       PULL_SECRET_NAME: pull-secret
