--- a/ci-operator/step-registry/hypershift/kubevirt/baremetalds/conformance/hypershift-kubevirt-baremetalds-conformance-workflow.yaml
+++ b/ci-operator/step-registry/hypershift/kubevirt/baremetalds/conformance/hypershift-kubevirt-baremetalds-conformance-workflow.yaml
@@ -19,6 +19,7 @@ workflow:
     Track HyperShift's development here: https://issues.redhat.com/projects/HOSTEDCP
   steps:
     post:
+    - ref: wait
     - chain: hypershift-dump
     - chain: gather-core-dump
     - chain: hypershift-kubevirt-destroy
@@ -40,7 +41,7 @@ workflow:
       DEVSCRIPTS_CONFIG: |
         IP_STACK=v4
         NETWORK_TYPE=OVNKubernetes
-        NUM_WORKERS=4
+        NUM_WORKERS=2
         WORKER_VCPU=16
         WORKER_MEMORY=65536
         VM_EXTRADISKS=true
