--- a/ci-operator/step-registry/hypershift/mce/ibmz/test/hypershift-mce-ibmz-test-chain.yaml
+++ b/ci-operator/step-registry/hypershift/mce/ibmz/test/hypershift-mce-ibmz-test-chain.yaml
@@ -6,13 +6,13 @@ chain:
       commands: |-
         set -x
         hc_name="agent-ibmz"
-        echo "Checking for the cluster-operators status to be ready"
+        echo "$(date) Checking for the cluster-operators status to be ready"
         export KUBECONFIG=${SHARED_DIR}/${hc_name}_kubeconfig
         while true; do
             count=$(oc get co --no-headers| awk '$3 != "True" {print $1}' | wc -l)
             if [ "$count" -eq 0 ]
             then
-                echo "All the cluster operators are ready"
+                echo "$(date) All the cluster operators are ready"
                 oc get co
                 break
             else
