--- a/ci-operator/config/openshift/hypershift/openshift-hypershift-release-4.14__periodics.yaml
+++ b/ci-operator/config/openshift/hypershift/openshift-hypershift-release-4.14__periodics.yaml
@@ -181,6 +181,7 @@ tests:
     workflow: hypershift-mce-power-conformance
 - as: e2e-mce-ibmz-conformance
   cron: 0 4 * * *
+  cluster: build03
   steps:
     cluster_profile: aws
     env:
