--- a/ci-operator/jobs/openshift/hypershift/openshift-hypershift-release-4.14-periodics.yaml
+++ b/ci-operator/jobs/openshift/hypershift/openshift-hypershift-release-4.14-periodics.yaml
@@ -953,7 +953,7 @@ periodics:
       secret:
         secretName: result-aggregator
 - agent: kubernetes
-  cluster: build01
+  cluster: build03
   cron: 0 4 * * *
   decorate: true
   decoration_config:
@@ -965,6 +965,7 @@ periodics:
   labels:
     ci-operator.openshift.io/cloud: aws
     ci-operator.openshift.io/cloud-cluster-profile: aws
+    ci-operator.openshift.io/cluster: build03
     ci-operator.openshift.io/variant: periodics
     ci.openshift.io/generator: prowgen
     job-release: "4.14"
