--- a/ci-operator/config/openshift/origin/openshift-origin-master.yaml
+++ b/ci-operator/config/openshift/origin/openshift-origin-master.yaml
@@ -180,7 +180,7 @@ tests:
 - as: e2e-gcp-ovn-upgrade
   steps:
     cluster_profile: gcp-openshift-gce-devel-ci-2
-    workflow: openshift-upgrade-gcp
+    workflow: openshift-upgrade-gcp-ovn
 - as: e2e-gcp-ovn-rt-upgrade
   optional: true
   steps:
