--- a/ci-operator/config/rhpit/interop-tests/rhpit-interop-tests-main__rosa-sts-test-rhods-operator-4.13-lp-rosa.yaml
+++ b/ci-operator/config/rhpit/interop-tests/rhpit-interop-tests-main__rosa-sts-test-rhods-operator-4.13-lp-rosa.yaml
@@ -36,7 +36,8 @@ tests:
   steps:
     cluster_profile: aws-cspi-qe
     env:
-      CLUSTER1_CONFIG: name=rosa-sts;platform=rosa;region=us-east-2;version=4.13;channel-group=stable;compute-machine-type=m5.4xlarge;timeout=90m;replicas=6;fips=false;ocm-env=stage
+      CLUSTER_NAME_PREFIX: rosa
+      CLUSTER1_CONFIG: platform=rosa;region=us-east-2;version=4.13;channel-group=stable;compute-machine-type=m5.4xlarge;timeout=90m;replicas=6;ocm-env=stage
       FIREWATCH_CONFIG: |
         [
           {"step": "operator-install", "failure_type": "all", "classification": "Provisioning - Operators", "jira_project": "LPTOCPCI"},
@@ -45,7 +46,6 @@ tests:
         ]
       FIREWATCH_DEFAULT_JIRA_PROJECT: LPTOCPCI
       FIREWATCH_JIRA_SERVER: https://issues.redhat.com
-      OPENSHIFT_VERSION: "4.13"
       OPERATOR1_CONFIG: name=rhods-operator;namespace=redhat-ods-operator
       S3_BUCKET_NAME: openshift-cli-installer
       S3_BUCKET_PATH: openshift-ci
